[gd_scene load_steps=5 format=1]

[ext_resource path="res://game/pong.gd" type="Script" id=1]
[ext_resource path="res://separator.png" type="Texture" id=2]
[ext_resource path="res://game/paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://right_pallete.png" type="Texture" id=4]

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="separator" type="Sprite" parent="."]

transform/pos = Vector2( 320, 200 )
texture = ExtResource( 2 )

[node name="PaddleL" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 40, 180 )

[node name="PaddleR" parent="." instance=ExtResource( 3 )]

editor/display_folded = true
transform/pos = Vector2( 600, 180 )
control_key_up = "right_move_up"
control_key_down = "right_move_down"

[node name="Sprite" parent="PaddleR"]

texture = ExtResource( 4 )

[node name="UI" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Score1" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 1.0
margin/right = 51.0
margin/bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score2" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 590.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Time" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 271.0
margin/top = 2.0
margin/right = 316.0
margin/bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelP1Win" type="Panel" parent="UI"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = 149.0
margin/right = 474.0
margin/bottom = 189.0

[node name="Label" type="Label" parent="UI/PanelP1Win"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 13.0
margin/right = 212.0
margin/bottom = 27.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "¡JUGADOR 1 GANA!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelP2Win" type="Panel" parent="UI"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = 149.0
margin/right = 474.0
margin/bottom = 189.0

[node name="Label" type="Label" parent="UI/PanelP2Win"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 13.0
margin/right = 212.0
margin/bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "¡JUGADOR 2 GANA!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RankingTimer" type="Timer" parent="."]

process/pause_mode = 2
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="timeout" from="RankingTimer" to="." method="_on_RankingTimer_timeout"]


[editable path="PaddleR"]
